--- a/style.css
+++ b/style.css
@@ -10,5 +10,6 @@ canvas {
     display: block;
     margin: auto;
     border: 1px solid black;
+    background-color: rgba(158, 167, 184, 0.2);
 }
 
